--- a/_posts/2017-09-23-hello-2017.markdown
+++ b/_posts/2017-09-23-hello-2017.markdown
@@ -12,12 +12,12 @@ tags:
 
 
 
-> “Yeah It's on. ”
-
 
 ## 前言
 
-的 Blog 就这么开通了。
+前年的这个时候,我基于Java+Boostrap+MySQL做了一个动态[博客](https://github.com/wangmax0330/dacp-app-blog)挂在阿里云上面,但是后来因为懒,写了3-4篇文章就不想写了;
+
+其实写博客更多的是自言自语,把知识归纳用口头语言描述出来;
 
 [跳过废话，直接看技术实现 ](#build) 
 
@@ -40,6 +40,6 @@ tags:
 
 
 
-—— 后记于 
+—— 后记于2017/09/23 
 
 
