你好,我的后半生

--- a/_posts/2017-10-14-hello-2017.markdown
+++ b/_posts/2017-10-14-hello-2017.markdown
@@ -11,31 +11,21 @@ tags:
 ---
 
 
-
-
 ## 前言
 
 1994年生于广东佛山市顺德区北滘镇一个小医院里
-
 2009年初中毕业,回到重庆某个区镇上读高中
-
 2012年来到四川读大学,学习计算机科学与技术
-
 2014年去了江苏无锡实习
-
 2015年骑行独自一人骑行318,可惜未进藏
-
 2016年大学毕业,选择留在成都
-
 2017年~
 
 ## 正文
 
 很久没有静下心来写过文章,总觉的写文章是一种理想主义,满是自言自语,兴许是现实中过的太久,每次都把自己折腾个够呛,偶尔闲下来,发现自己好像什么都没有干过,难免心里莫名慌张.
 从一个连内存和硬盘都分不清区别的菜鸟成为一个能熟练开发程序,独立解决bug问题工程师需要多久?--------满打满算我花了3年的时间,1年自学编程,2年工作!不够勤奋,比不上3个月的培训班,这个很尴尬.
-
-坚持真的不是一种容易养成的习惯了,工作总是忙碌的,人总是爱偷懒的;很多时候忙着工作,忘记了自己的初衷,
-
+坚持真的不是一种容易养成的习惯了,工作总是忙碌的,人总是爱偷懒的;很多时候忙着工作,忘记了自己的初衷!
 在此,记录下自己的工作与生活,哪年感兴趣,有空了,再来翻看是否蹉跎了青春...
 
 ![](img/20171014171930.jpg)
